--- a/style.css
+++ b/style.css
@@ -1,19 +1,18 @@
 body {
 	background-color: #eff1ef;
 }
+header {
+	background-color: green;
+}
 footer {
 	background-color: #9084be;
 	margin-top: 30px;
 }
-
 a {
 	text-decoration: none;
 }
 nav {
 	background-color: yellow;
-}
-header {
-	background-color: green;
 }
 header img {
 	width: 50px;
@@ -23,6 +22,9 @@ header nav li {
 }
 footer img {
 	width: 30px;
+}
+th, td {
+	border: 1px solid black;
 }
 .FB-logo {
 	padding: 20px 0 0 50px;
